# pytest-nodeid-to-filepath

./: .pre-commit-config.yaml  Jenkinsfile  README.md  pyproject.toml  ruff.toml
pytest_nodeid_to_filepath/: __init__.py  main.py  plugin.py
scripts/: release.sh
tests/: test_main.py
